--- a/CSS/header.css
+++ b/CSS/header.css
@@ -51,6 +51,13 @@
     margin-left: 20px;
     float: left;
 }
+#NAVBAR #logo ul li{
+    margin-left: 20px;
+    float: left;
+	position: relative;
+	list-style: none;
+}
+
 
 #NAVBAR #nav1 ul {
     float: right;
@@ -104,6 +111,9 @@
 #NAVBAR #nav1 ul li ul li a:hover {
     background-color: #f3f3f3;
 }
+
+
+
 /* Style the search field */
 form.example input[type=text] {
   padding: 17px;
