--- a/CSS/about.css
+++ b/CSS/about.css
@@ -1,8 +1,14 @@
 
-
 .col-md-12, .col-md-2 {
     padding: 0px !important;
     
+}
+.col-md-3{
+margin-left: -30px;
+margin-right: 20px;
+}
+.myClass{
+    font-size: 12px;
 }
 .title{} .subtitle{
     margin-bottom: 7px;
@@ -25,10 +31,61 @@
     font-weight:300;
 text-align: center;
 background-color:#f2d9e6;
+}
 
+.text {
+   color: #e6e6e6;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
 
+}
 
+.photo .verone:hover .overlay {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
 
+}
+.photo .blerta:hover .overlay {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+.photo .raul:hover .overlay {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+.photo .fatma:hover .overlay {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+.photo .lucas:hover .overlay {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
 }
 .main_title strong{
     font-weight: 600;
@@ -91,7 +148,7 @@ background-color:#f2d9e6;
     margin-bottom:60px;
     color:white;
     font-size: 40px;
-
+s
 }
 .border{
   
@@ -114,12 +171,11 @@ border-radius: 50%;
 }
 .photo a img{
     width:100%;
-    filter: grayscale(100%);
     transition: 0.4s all;
 
 }
 .photo a:hover > img{
-    filter:none;
+   filter: grayscale(40%);
 
 }
 .team{
