--- a/CSS/about.css
+++ b/CSS/about.css
@@ -35,6 +35,7 @@ background-color:#f2d9e6;
 
 .text {
    color: #e6e6e6;
+   text-shadow: 2px 2px black;
   font-size: 20px;
   position: absolute;
   top: 50%;
