--- a/CSS/index.css
+++ b/CSS/index.css
@@ -143,3 +143,54 @@ body {
 
 
 /*==============================SLIDESHOWWWWWWWWW==============================================*/
+/* MENU */
+#nav1 {
+	overflow: hidden;
+  }
+  
+ #nav1 a {
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+  }
+  
+ #nav1 a:hover {
+	background-color: #ddd;
+	color: black;
+  }
+ 
+ #nav1 a.active {
+	background-color: #4CAF50;
+	color: white;
+  }
+  
+ #nav1 .icon {
+	color: white !important;
+	display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+	#nav1 a:not(:first-child) {display: none;}
+	#nav1 a.icon {
+	  float: right;
+	  display: block;
+	}
+  }
+  
+  @media screen and (max-width: 600px) {
+	#nav1.responsive {position: relative;}
+	#nav1.responsive .icon {
+	  position: absolute;
+	  right: 0;
+	  top: 0;
+	}
+	#nav1.responsive a {
+	  float: none;
+	  display: block;
+	  text-align: left;
+	}
+  }
