--- a/templates/FacultyofArchitecture.html
+++ b/templates/FacultyofArchitecture.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <link rel="stylesheet" type="text/css" href="../CSS/fcs.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/about.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/header.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/menu.css"> 
-        <link rel="stylesheet" type="text/css" href="../CSS/index.css">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/fcs.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <!-- Newww -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -21,7 +21,7 @@
 
         <header class="col-md-12" >
             <div class="right">
-                <a href="../PAGES/help.html"> Help </a>
+                <a href="/help"> Help </a>
             </div>
         </header>
     </div>
@@ -30,7 +30,7 @@
             <div id="NAVBAR" class="col-md-12" >
                 <div class="col-md-12" >
                 <div id="logo" class="col-md-2">
-                <h3><a href="../index.html"><img src="../IMAGES/logo.png" height="70px" width="120px"></a></h3>
+                <h3><a href="/"><img src="{{url_for('static', filename='images/logo.png')}}" height="70px" width="120px"></a></h3>
                 </div>
                 <div class="col-md-7">
                     <div class="col-md-8">
@@ -38,23 +38,23 @@
                             <input onclick="myF1();" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()" name="search">
                         </form>
                         <div id="myDropdown" class="dropdown-content">
-                            <a onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = 'FacultyofArchitecture.html';">Kip6(Kipsalas st 6) Faculty of architecture</a>
-                            
-                             <a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = 'FacultyofCivilEngineering.html';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
-                            
-                             <a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = 'FacultyofComputerScienceandInformationTechnology.html';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
-                            
-                             <a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = 'FacultyofE-LearningTechnologiesandHumanities.html';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
-                            
-                            <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = 'FacultyofEngineeringEconomicsandManagement.html';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
-                            
-                             <a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = 'FacultyofMaterialsScienceandAppliedChemistry.html';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
-                            
-                             <a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = 'FacultyofMechanicalEngineeringTransportandAeronautics.html';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
-                            
-                             <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = 'FacultyofPowerandElectricalEngineering.html';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
-                            
-                            <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = 'FacultyofElectronicsandTelecommunications.html';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
+                           	<a onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = '/FacultyofArchitecture';">Kip6(Kipsalas st 6) Faculty of architecture</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = '/FacultyofCivilEngineering';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = '/FacultyofComputerScienceandInformationTechnology';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = '/FacultyofE-LearningTechnologiesandHumanities';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
+					    
+					    <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = '/FacultyofEngineeringEconomicsandManagement';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = '/FacultyofMaterialsScienceandAppliedChemistry';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = '/FacultyofMechanicalEngineeringTransportandAeronautics';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
+					    
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = '/FacultyofPowerandElectricalEngineering';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
+						
+						<a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = '/FacultyofElectronicsandTelecommunications';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
     
                         </div>
                     </div>
@@ -67,12 +67,12 @@
                     <ul>
                         <li>
                         <div class="col-md-2">
-                        <a href="../index.html" class="cool-link">Home</a>
+                        <a href="/" class="cool-link">Home</a>
                         </div>
                         </li>
                         <li id="nav1">
                         <div class="col-md-12">
-                        <a href="../PAGES/aboutUs.html" class="cool-link">About us</a>
+                        <a href="/aboutus" class="cool-link">About us</a>
                         </div>
                         </li>
                     </ul>
@@ -86,16 +86,16 @@
             <!--=========================================================/NAVBAR====================================================-->
     
 <div id="allFaculties" class="col-md-2" style="border: 1px solid #005551">
-  <a class="active">Our Faculties</a>
-  <a href="../PAGES/FacultyofArchitecture.html">Faculty of Architecture</a>
-  <a href="../PAGES/FacultyofCivilEngineering.html">Faculty of Civil Engineering</a>
-  <a href="../PAGES/FacultyofComputerScienceandInformationTechnology.html">Faculty of Computer Science and Information Technology</a>
-  <a href="../PAGES/FacultyofE-LearningTechnologiesandHumanities.html">Faculty of E-Learning Technologies and Humanities</a>
-   <a href="../PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
-  <a href="../PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
-  <a href="../PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
-  <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Electrical and Environmental Engineering</a>
-  <a href="../PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
+ <a class="active">Our Faculties</a>
+  <a href="/FacultyofArchitecture">Faculty of Architecture</a>
+  <a href="/FacultyofCivilEngineering">Faculty of Civil Engineering</a>
+  <a href="/FacultyofComputerScienceandInformationTechnology">Faculty of Computer Science and Information Technology</a>
+  <a href="/FacultyofE-LearningTechnologiesandHumanities">Faculty of E-Learning Technologies and Humanities</a>
+   <a href="/FacultyofEngineeringEconomicsandManagement">Faculty of Engineering Economics and Management</a>
+  <a href="/FacultyofMaterialsScienceandAppliedChemistry">Faculty of Materials Science and Applied Chemistry</a>
+  <a href="/FacultyofMechanicalEngineeringTransportandAeronautics">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
+  <a href="/FacultyofPowerandElectricalEngineering">Faculty of Electrical and Environmental Engineering</a>
+  <a href="/FacultyofElectronicsandTelecommunications">Faculty of Electronics and Telecommunications</a>
 </div>
 <!-- =================================================//BODY//============================================= -->
 <div class = "col-md-10" id="faculty" >
@@ -105,7 +105,7 @@
     <div>
        <div id="img" class="col-md-6">
        <a href="https://www.google.lv/maps/place/%C4%B6%C4%ABpsalas+iela+6,+Kurzemes+rajons,+R%C4%ABga,+LV-1048/@56.9533611,24.0802535,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfe0c0444b69:0x9001e687791a7ab9!8m2!3d56.9533582!4d24.0824422?hl=en">
-           <img src="../IMAGES/architecture.jpg" style="width: 100%;"> 
+           <img src="{{url_for('static', filename='images/architecture.jpg')}}" style="width: 100%;"> 
        </a>
       
     </div> 
@@ -164,7 +164,7 @@
         </div>
         <div class="modal-body">
          <!-- Add here coordinates at #-->
-          <a href="https://www.google.lv/maps/place/%C4https://www.google.lv/maps/place/56%C2%B057'10.7%22N+24%C2%B004'57.7%22E/@56.9529849,24.0804933,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.952982!4d24.082682?hl=en%B6%C4%ABpsalas+iela+6,+Kurzemes+rajons,+R%C4%ABga,+LV-1048/@56.9533611,24.0802535,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfe0c0444b69:0x9001e687791a7ab9!8m2!3d56.9533582!4d24.0824422?hl=en"><img src="../IMAGES/kipsala.jpg" style="width: 100%;"></a>
+          <a href="https://www.google.lv/maps/place/%C4https://www.google.lv/maps/place/56%C2%B057'10.7%22N+24%C2%B004'57.7%22E/@56.9529849,24.0804933,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.952982!4d24.082682?hl=en%B6%C4%ABpsalas+iela+6,+Kurzemes+rajons,+R%C4%ABga,+LV-1048/@56.9533611,24.0802535,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfe0c0444b69:0x9001e687791a7ab9!8m2!3d56.9533582!4d24.0824422?hl=en"><img src="{{url_for('static', filename='images/kipsala.jpg')}}" style="width: 100%;"></a>
           <h4 style="text-align: center;"><a href="https://www.google.lv/maps/place/56%C2%B057'10.7%22N+24%C2%B004'57.7%22E/@56.9529849,24.0804933,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.952982!4d24.082682?hl=en">Click here</a> to go to Google Maps</h4>
         </div>
         
@@ -225,11 +225,11 @@
                             Email: <a href="mailto:findyourrtu@gmail.com">findyourrtu@gmail.com</a></p>
 
                         <p>
-                            <a href="https://www.linkedin.com/"><img src="../IMAGES/linkedin.png" class="socialicons" alt="linkedin" width="16" height="16"></a>
-                            <a href="https://www.twitter.com/"><img src="../IMAGES/Twitter.png" class="socialicons" alt="twitter" width="16" height="16"></a>
-                            <a href="https://www.pinterest.com/"><img src="../IMAGES/Pinterest.png" class="socialicons" alt="pinterest" width="16" height="16"></a>
-                            <a href="https://www.plus.google.com/"><img src="../IMAGES/Google.png" class="socialicons" alt="googleplus" width="16" height="16"></a>
-                            <img class="socialicons" src="../IMAGES/rss.jpg" alt="RSS" width="16" height="16">
+                            <a href="https://www.linkedin.com/"><img src="{{url_for('static', filename='images/Linkedin.png')}}" class="socialicons" alt="linkedin" width="16" height="16"></a>
+                            <a href="https://www.twitter.com/"><img src="{{url_for('static', filename='images/Twitter.png')}}" class="socialicons" alt="twitter" width="16" height="16"></a>
+                            <a href="https://www.pinterest.com/"><img src="{{url_for('static', filename='images/Pinterest.png')}}" class="socialicons" alt="pinterest" width="16" height="16"></a>
+                            <a href="https://www.plus.google.com/"><img src="{{url_for('static', filename='images/Google.png')}}" class="socialicons" alt="googleplus" width="16" height="16"></a>
+                            <img class="socialicons" src="{{url_for('static', filename='images/rss.jpg')}}" alt="RSS" width="16" height="16">
                         </p>
                     </div>
                 </div>
