--- a/templates/FacultyofEngineeringEconomicsandManagement.html
+++ b/templates/FacultyofEngineeringEconomicsandManagement.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
  <head>
-    
-        <link rel="stylesheet" type="text/css" href="../CSS/about.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/header.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/menu.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/index.css">  
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fcs.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css') }}">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <!-- Newww -->
         <link rel="stylesheet" type="text/css" href="../CSS/fcs.css">
@@ -21,7 +21,7 @@
 
         <header class="col-md-12" >
             <div class="right">
-                <a href="../PAGES/help.html"> Help </a>
+                <a href="/help"> Help </a>
             </div>
         </header>
     </div>
@@ -33,7 +33,7 @@
         <div id="NAVBAR" class="col-md-12" >
             <div class="col-md-12" >
             <div id="logo" class="col-md-2">
-            <h3><a href="../index.html"><img src="../IMAGES/logo.png" height="70px" width="120px"></a></h3>
+            <h3><a href="/"><img src="{{url_for('static', filename='images/logo.png')}}" height="70px" width="120px"></a></h3>
             </div>
             <div class="col-md-7">
                 <div class="col-md-8">
@@ -41,23 +41,23 @@
                         <input onclick="myF1();" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()" name="search">
                     </form>
                     <div id="myDropdown" class="dropdown-content">
-                        <a onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = 'FacultyofArchitecture.html';">Kip6(Kipsalas st 6) Faculty of architecture</a>
+                        <a onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = 'FacultyofArchitecture';">Kip6(Kipsalas st 6) Faculty of architecture</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = 'FacultyofCivilEngineering.html';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = 'FacultyofCivilEngineering';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = 'FacultyofComputerScienceandInformationTechnology.html';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = 'FacultyofComputerScienceandInformationTechnology';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = 'FacultyofE-LearningTechnologiesandHumanities.html';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = 'FacultyofE-LearningTechnologiesandHumanities';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
                         
-                        <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = 'FacultyofEngineeringEconomicsandManagement.html';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
+                        <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = 'FacultyofEngineeringEconomicsandManagement';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = 'FacultyofMaterialsScienceandAppliedChemistry.html';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = 'FacultyofMaterialsScienceandAppliedChemistry';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = 'FacultyofMechanicalEngineeringTransportandAeronautics.html';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = 'FacultyofMechanicalEngineeringTransportandAeronautics';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = 'FacultyofPowerandElectricalEngineering.html';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = 'FacultyofPowerandElectricalEngineering';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
                         
-                        <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = 'FacultyofElectronicsandTelecommunications.html';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
+                        <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = 'FacultyofElectronicsandTelecommunications';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
 
                     </div>
                 </div>
@@ -70,12 +70,12 @@
                 <ul>
                     <li>
                     <div class="col-md-2">
-                    <a href="../index.html" class="cool-link">Home</a>
+                    <a href="/" class="cool-link">Home</a>
                     </div>
                     </li>
                     <li id="nav1">
                     <div class="col-md-12">
-                    <a href="../PAGES/aboutUs.html" class="cool-link">About us</a>
+                    <a href="/aboutus" class="cool-link">About us</a>
                     </div>
                     </li>
                 </ul>
@@ -87,15 +87,15 @@
 
 <div id="allFaculties" class="col-md-2" style="border: 1px solid #005551">
   <a class="active">Our Faculties</a>
-  <a href="../PAGES/FacultyofArchitecture.html">Faculty of Architecture</a>
-  <a href="../PAGES/FacultyofCivilEngineering.html">Faculty of Civil Engineering</a>
-  <a href="../PAGES/FacultyofComputerScienceandInformationTechnology.html">Faculty of Computer Science and Information Technology</a>
-  <a href="../PAGES/FacultyofE-LearningTechnologiesandHumanities.html">Faculty of E-Learning Technologies and Humanities</a>
-   <a href="../PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
-  <a href="../PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
-  <a href="../PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
-  <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Electrical and Environmental Engineering</a>
-  <a href="../PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
+  <a href="/FacultyofArchitecture">Faculty of Architecture</a>
+  <a href="/FacultyofCivilEngineering">Faculty of Civil Engineering</a>
+  <a href="/FacultyofComputerScienceandInformationTechnology">Faculty of Computer Science and Information Technology</a>
+  <a href="/FacultyofE-LearningTechnologiesandHumanities">Faculty of E-Learning Technologies and Humanities</a>
+   <a href="/FacultyofEngineeringEconomicsandManagement">Faculty of Engineering Economics and Management</a>
+  <a href="/FacultyofMaterialsScienceandAppliedChemistry">Faculty of Materials Science and Applied Chemistry</a>
+  <a href="/FacultyofMechanicalEngineeringTransportandAeronautics">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
+  <a href="/FacultyofPowerandElectricalEngineering">Faculty of Electrical and Environmental Engineering</a>
+  <a href="/FacultyofElectronicsandTelecommunications">Faculty of Electronics and Telecommunications</a>
 </div>
 
 <!-- =================================================//BODY//============================================= -->
@@ -106,7 +106,7 @@
     <div>
        <div id="img" class="col-md-6">
        <a href="https://www.google.lv/maps/place/Kalnciema+iela+6,+Zemgales+priek%C5%A1pils%C4%93ta,+R%C4%ABga,+LV-1048/@56.9451946,24.0766186,17z/data=!3m1!4b1!4m5!3m4!1s0x46eed021dd13af39:0xb3c3fbb4cd28d36!8m2!3d56.9451946!4d24.0788073">
-           <img src="../IMAGES/economics.jpg" style="width: 100%;"> 
+           <img src="{{url_for('static', filename='images/economics.jpg')}}" style="width: 100%;"> 
        </a>
       
     </div> 
@@ -172,7 +172,7 @@
         </div>
         <div class="modal-body">
          <!-- Add here coordinates at #-->
-          <a href="https://www.google.lv/maps/place/56%C2%B056'42.3%22N+24%C2%B004'45.0%22E/@56.9450779,24.0769703,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.945075!4d24.079159"><img src="../IMAGES/kalnciema.png" style="width: 100%;"></a>
+          <a href="https://www.google.lv/maps/place/56%C2%B056'42.3%22N+24%C2%B004'45.0%22E/@56.9450779,24.0769703,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.945075!4d24.079159"><img src="{{url_for('static', filename='images/kalnciema.png')}}" style="width: 100%;"></a>
           <h4 style="text-align: center;"><a href="https://www.google.lv/maps/place/56%C2%B056'42.3%22N+24%C2%B004'45.0%22E/@56.9450779,24.0769703,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.945075!4d24.079159">Click here</a> to go to Google Maps</h4>
         </div>
         
@@ -196,7 +196,7 @@
         </div>
         <div class="modal-body">
          <!-- Add here coordinates at #-->
-          <a href="https://www.google.lv/maps/place/56%C2%B056'49.8%22N+24%C2%B006'17.7%22E/@56.9471739,24.1027293,17z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d56.9471713!4d24.1049184"><img src="../IMAGES/kalku.jpg" style="width: 100%;"></a>
+          <a href="https://www.google.lv/maps/place/56%C2%B056'49.8%22N+24%C2%B006'17.7%22E/@56.9471739,24.1027293,17z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d56.9471713!4d24.1049184"><img src="{{url_for('static', filename='images/kalku.jpg')}}" style="width: 100%;"></a>
           <h4 style="text-align: center;"><a href="https://www.google.lv/maps/place/56%C2%B056'49.8%22N+24%C2%B006'17.7%22E/@56.9471739,24.1027293,17z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d56.9471713!4d24.1049184">Click here</a> to go to Google Maps</h4>
         </div>
         
@@ -257,11 +257,11 @@
                           Email: <a href="mailto:findYourRTU@gmail.com">findYourRTU@gmail.com</a></p>
 
                         <p>
-                            <a href="https://www.linkedin.com/"><img src="../IMAGES/linkedin.png" class="socialicons" alt="linkedin" width="16" height="16"></a>
-                            <a href="https://www.twitter.com/"><img src="../IMAGES/Twitter.png" class="socialicons" alt="twitter" width="16" height="16"></a>
-                            <a href="https://www.pinterest.com/"><img src="../IMAGES/Pinterest.png" class="socialicons" alt="pinterest" width="16" height="16"></a>
-                            <a href="https://www.plus.google.com/"><img src="../IMAGES/Google.png" class="socialicons" alt="googleplus" width="16" height="16"></a>
-                            <img class="socialicons" src="../IMAGES/rss.jpg" alt="RSS" width="16" height="16">
+                            <a href="https://www.linkedin.com/"><img src="{{url_for('static', filename='images/Linkedin.png')}}" class="socialicons" alt="linkedin" width="16" height="16"></a>
+                            <a href="https://www.twitter.com/"><img src="{{url_for('static', filename='images/Twitter.png')}}" class="socialicons" alt="twitter" width="16" height="16"></a>
+                            <a href="https://www.pinterest.com/"><img src="{{url_for('static', filename='images/Pinterest.png')}}" class="socialicons" alt="pinterest" width="16" height="16"></a>
+                            <a href="https://www.plus.google.com/"><img src="{{url_for('static', filename='images/Google.png')}}" class="socialicons" alt="googleplus" width="16" height="16"></a>
+                            <img class="socialicons" src="{{url_for('static', filename='images/rss.jpg')}}" alt="RSS" width="16" height="16">
                         </p>
                     </div>
                 </div>
