--- a/templates/FacultyofMaterialsScienceandAppliedChemistry.html
+++ b/templates/FacultyofMaterialsScienceandAppliedChemistry.html
@@ -1,12 +1,12 @@
-
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="../CSS/about.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/header.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/menu.css">
-        <link rel="stylesheet" type="text/css" href="../CSS/index.css"> 
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/fcs.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css') }}"> 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <!-- Newww -->
         <link rel="stylesheet" type="text/css" href="../CSS/fcs.css">
@@ -21,18 +21,19 @@
 
         <header class="col-md-12" >
             <div class="right">
-                <a href="../PAGES/help.html"> Help </a>
+                <a href="/help"> Help </a>
             </div>
         </header>
     </div>
-    <!--=========================================================/HEADER====================================================-->
+        <!--=========================================================/HEADER====================================================-->
+
 
     <!--==========================================================NAVBAR====================================================-->
     <div class="col-md-12">
         <div id="NAVBAR" class="col-md-12" >
             <div class="col-md-12" >
             <div id="logo" class="col-md-2">
-            <h3><a href="../index.html"><img src="../IMAGES/logo.png" height="70px" width="120px"></a></h3>
+            <h3><a href="/"><img src="{{url_for('static', filename='images/logo.png')}}" height="70px" width="120px"></a></h3>
             </div>
             <div class="col-md-7">
                 <div class="col-md-8">
@@ -40,23 +41,23 @@
                         <input onclick="myF1();" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()" name="search">
                     </form>
                     <div id="myDropdown" class="dropdown-content">
-                        <a onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = 'FacultyofArchitecture.html';">Kip6(Kipsalas st 6) Faculty of architecture</a>
+                        <a onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = 'FacultyofArchitecture';">Kip6(Kipsalas st 6) Faculty of architecture</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = 'FacultyofCivilEngineering.html';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = 'FacultyofCivilEngineering';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = 'FacultyofComputerScienceandInformationTechnology.html';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = 'FacultyofComputerScienceandInformationTechnology';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = 'FacultyofE-LearningTechnologiesandHumanities.html';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = 'FacultyofE-LearningTechnologiesandHumanities';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
                         
-                        <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = 'FacultyofEngineeringEconomicsandManagement.html';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
+                        <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = 'FacultyofEngineeringEconomicsandManagement';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = 'FacultyofMaterialsScienceandAppliedChemistry.html';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = 'FacultyofMaterialsScienceandAppliedChemistry';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = 'FacultyofMechanicalEngineeringTransportandAeronautics.html';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = 'FacultyofMechanicalEngineeringTransportandAeronautics';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
                         
-                         <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = 'FacultyofPowerandElectricalEngineering.html';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
+                         <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = 'FacultyofPowerandElectricalEngineering';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
                         
-                        <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = 'FacultyofElectronicsandTelecommunications.html';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
+                        <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = 'FacultyofElectronicsandTelecommunications';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
 
                     </div>
                 </div>
@@ -69,12 +70,12 @@
                 <ul>
                     <li>
                     <div class="col-md-2">
-                    <a href="../index.html" class="cool-link">Home</a>
+                    <a href="/" class="cool-link">Home</a>
                     </div>
                     </li>
                     <li id="nav1">
                     <div class="col-md-12">
-                    <a href="../PAGES/aboutUs.html" class="cool-link">About us</a>
+                    <a href="/aboutus" class="cool-link">About us</a>
                     </div>
                     </li>
                 </ul>
@@ -86,57 +87,48 @@
 
 <div id="allFaculties" class="col-md-2" style="border: 1px solid #005551">
   <a class="active">Our Faculties</a>
-  <a href="../PAGES/FacultyofArchitecture.html">Faculty of Architecture</a>
-  <a href="../PAGES/FacultyofCivilEngineering.html">Faculty of Civil Engineering</a>
-  <a href="../PAGES/FacultyofComputerScienceandInformationTechnology.html">Faculty of Computer Science and Information Technology</a>
-  <a href="../PAGES/FacultyofE-LearningTechnologiesandHumanities.html">Faculty of E-Learning Technologies and Humanities</a>
-   <a href="../PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
-  <a href="../PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
-  <a href="../PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
-  <a href="../PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Electrical and Environmental Engineering</a>
-  <a href="../PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
+  <a href="/FacultyofArchitecture">Faculty of Architecture</a>
+  <a href="/FacultyofCivilEngineering">Faculty of Civil Engineering</a>
+  <a href="/FacultyofComputerScienceandInformationTechnology">Faculty of Computer Science and Information Technology</a>
+  <a href="/FacultyofE-LearningTechnologiesandHumanities">Faculty of E-Learning Technologies and Humanities</a>
+    <a href="/FacultyofEngineeringEconomicsandManagement">Faculty of Engineering Economics and Management</a>
+  <a href="/FacultyofMaterialsScienceandAppliedChemistry">Faculty of Materials Science and Applied Chemistry</a>
+  <a href="/FacultyofMechanicalEngineeringTransportandAeronautics">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
+  <a href="/FacultyofPowerandElectricalEngineering">Faculty of Electrical and Environmental Engineering</a>
+  <a href="/FacultyofElectronicsandTelecommunications">Faculty of Electronics and Telecommunications</a>
 </div>
-
-
-
-
-
-
-
-    <!-- =================================================//BODY//============================================= -->
+<!-- =================================================//BODY//============================================= -->
 <div class = "col-md-10" id="faculty" >
-    <a href="https://www.rtu.lv/en/university/structure-and-administration/faculties/power-and-electrical-engineering">
-
-       <h2 id="title">FACULTY OF ELECTRICAL AND ENVIRONMENTAL ENGINEERING</h2>
-
+    <a href="https://www.rtu.lv/en/university/structure-and-administration/faculties/materials-science-and-applied-chemistry">
+       <h2 id="title">FACULTY OF MATERIALS SCIENCE AND APPLIED CHEMISTRY</h2>
      </a>
     <div>
        <div id="img" class="col-md-6">
-       <a href="https://www.google.lv/maps/place/%C4%80zenes+iela+12%2F1,+Kurzemes+rajons,+R%C4%ABga,+LV-1048/@56.9514727,24.0779327,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfe046a63457:0xe9ed94fa69ae6e58!8m2!3d56.9514698!4d24.0801214">
-           <img src="../IMAGES/power.jpg" style="width: 100%;"> 
+       <a href="https://www.google.lv/maps/place/Paula+Valdena+iela,+Kurzemes+rajons,+R%C4%ABga,+LV-1048/@56.9541,24.0776413,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfe0d77126b7:0xa169fb344ffb5280!8m2!3d56.9541!4d24.07983">
+           <img src="{{url_for('static', filename='images/chemistry.jpg')}}" style="width: 100%;"> 
        </a>
       
     </div> 
     <div id="door" class="col-md-6">
        <h2>Location</h2>
-       <a style="color: black;" href="https://www.google.lv/maps/place/%C4%80zenes+iela+12%2F1,+Kurzemes+rajons,+R%C4%ABga,+LV-1048/@56.9514727,24.0779327,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfe046a63457:0xe9ed94fa69ae6e58!8m2!3d56.9514698!4d24.0801214">    
+       <a style="color: black;" href="https://www.google.lv/maps/place/Paula+Valdena+iela,+Kurzemes+rajons,+R%C4%ABga,+LV-1048/@56.9541,24.0776413,17z/data=!3m1!4b1!4m5!3m4!1s0x46eecfe0d77126b7:0xa169fb344ffb5280!8m2!3d56.9541!4d24.07983">    
            <h4>
                <i class='fa fa-map-marker' style="font-size: 20px;"></i> 
-               12/1 Azenes Street, Riga
+               3/7 Paula Valdena Street, room 269, Riga
            </h4>
        </a>
        <h2>Contact</h2>
        <h4>
            <i class='fa fa-phone'></i> 
-           +371 67089901
+           +371 67089249
        </h4>
        <h4>
            <i class='fa fa-envelope-o'></i> 
-           eef@rtu.lv
+           mlkf@rtu.lv
        </h4>
-       <a href="https://www.rtu.lv/lv/eef" style="color: black;">
+       <a href="https://www.rtu.lv/lv/mlkf" style="color: black;">
            <h4>
-            eef.rtu.lv
+            mlkf.rtu.lv
            </h4>
        </a>
     </div>
@@ -144,25 +136,25 @@
         <h2 style="text-align: center;  color: #005551;">BUILDINGS</h2>
         
         <div class="col-md-12" style="text-align: center;">
-            <button type="button" class="btn btn-link" data-toggle="modal" data-target="#azenesModal" style="color: black;">
-                <h3 id="azenes"> Az</h3>
-                <h3 id="azenes"> Azenes st</h3>
+            <button type="button" class="btn btn-link" data-toggle="modal" data-target="#paulaModal" style="color: black;">
+                <h3 id="paula">PV</h3>
+                <h3 id="paula">Paula Valdena st</h3>
             </button>
             
         </div>
     </div>
     </div>
-</div>
+
     </div>
 
     <!-- ============================================ MODAL============================================ --> 
-  <!-- Azenes Modal -->
-  <div class="modal fade" id="azenesModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <!-- Paula Modal -->
+  <div class="modal fade" id="paulaModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header" >
         <div class="col-md-10">
-          <h3 class="modal-title" style="text-align: center; color:  #005551;" > Azenes st</h3>
+          <h3 class="modal-title" style="text-align: center; color:  #005551;" >Paula Valdena st</h3>
         </div>
         <div class="col-md-2">
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -172,15 +164,13 @@
         </div>
         <div class="modal-body">
          <!-- Add here coordinates at #-->
-          <a href="https://www.google.lv/maps/place/56%C2%B057'05.3%22N+24%C2%B004'49.5%22E/@56.9514719,24.0782373,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.951469!4d24.080426"><img src="../IMAGES/azenes.png" style="width: 100%;"></a>
-          <h4 style="text-align: center;"><a href="https://www.google.lv/maps/place/56%C2%B057'05.3%22N+24%C2%B004'49.5%22E/@56.9514719,24.0782373,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.951469!4d24.080426">Click here</a> to go to Google Maps</h4>
+          <a href="https://www.google.lv/maps/place/56%C2%B057'12.9%22N+24%C2%B004'40.3%22E/@56.9535759,24.0756593,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.953573!4d24.077848"><img src="{{url_for('static', filename='images/paula_valdena.png')}}" style="width: 100%;"></a>
+          <h4 style="text-align: center;"><a href="https://www.google.lv/maps/place/56%C2%B057'12.9%22N+24%C2%B004'40.3%22E/@56.9535759,24.0756593,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x0!8m2!3d56.953573!4d24.077848">Click here</a> to go to Google Maps</h4>
         </div>
         
       </div>
     </div>
   </div>
-
-
 
         <!--============================================================FOOTER===============================================================-->
  <div  class="col-md-12">
@@ -219,7 +209,7 @@
                                     Address: Riga<br />
                                     Place: Latvia<br />
                                     Mail: 1011<br /></p>
-                               
+                              
                             </adress><br />
                         </div>
                     </div>
@@ -227,20 +217,19 @@
 
                 <div class="footer_display" style="background:#222222">
                     <div id="newsletter" class="column">
-                        <?=$thankYou ?>
                         
                         <h3 style="margin-bottom: 1px;">Contact Us</h3><br />
                         
                         <p class="big">Telephone: +371...<br />
-                            Fax:+371....<br />
-                            Email: <a href="mailto:findYourRTU@gmail.com">findYourRTU@gmail.com</a></p>
+                          Fax:+371....<br />
+                          Email: <a href="mailto:findYourRTU@gmail.com">findYourRTU@gmail.com</a></p>
 
                         <p>
-                            <a href="https://www.linkedin.com/"><img src="../IMAGES/linkedin.png" class="socialicons" alt="linkedin" width="16" height="16"></a>
-                            <a href="https://www.twitter.com/"><img src="../IMAGES/Twitter.png" class="socialicons" alt="twitter" width="16" height="16"></a>
-                            <a href="https://www.pinterest.com/"><img src="../IMAGES/Pinterest.png" class="socialicons" alt="pinterest" width="16" height="16"></a>
-                            <a href="https://www.plus.google.com/"><img src="../IMAGES/Google.png" class="socialicons" alt="googleplus" width="16" height="16"></a>
-                            <img class="socialicons" src="../IMAGES/rss.jpg" alt="RSS" width="16" height="16">
+                            <a href="https://www.linkedin.com/"><img src="{{url_for('static', filename='images/Linkedin.png')}}" class="socialicons" alt="linkedin" width="16" height="16"></a>
+                            <a href="https://www.twitter.com/"><img src="{{url_for('static', filename='images/Twitter.png')}}" class="socialicons" alt="twitter" width="16" height="16"></a>
+                            <a href="https://www.pinterest.com/"><img src="{{url_for('static', filename='images/Pinterest.png')}}" class="socialicons" alt="pinterest" width="16" height="16"></a>
+                            <a href="https://www.plus.google.com/"><img src="{{url_for('static', filename='images/Google.png')}}" class="socialicons" alt="googleplus" width="16" height="16"></a>
+                            <img class="socialicons" src="{{url_for('static', filename='images/rss.jpg')}}" alt="RSS" width="16" height="16">
                         </p>
                     </div>
                 </div>
