--- a/templates/aboutUs.html
+++ b/templates/aboutUs.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
  <head>
-            <link rel="stylesheet" type="text/css" href="../CSS/about.css">
-            <link rel="stylesheet" type="text/css" href="../CSS/header.css">
-            <link rel="stylesheet" type="text/css" href="../CSS/footer.css">
-            <link rel="stylesheet" type="text/css" href="../CSS/index.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
       <!--       <link rel="stylesheet" type="text/css" href="CSS/menu.css"> -->
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         </head>
@@ -15,7 +15,7 @@
 
         <header class="col-md-12" >
             <div class="right">
-                <a href="../PAGES/help.html"> Help </a>
+                <a href="/help"> Help </a>
             </div>
         </header>
     </div>
@@ -27,7 +27,7 @@
         <div id="NAVBAR" class="col-md-12" >
             <div class="col-md-12" >
             <div id="logo" class="col-md-2">
-            <h3><a href="../index.html"><img src="../IMAGES/logo.png" height="70px" width="120px"></a></h3>
+            <h3><a href="/"><img src="{{url_for('static', filename='images/logo.png')}}" height="70px" width="120px"></a></h3>
             </div>
             <div class="col-md-7">
               <div class="col-md-8">
@@ -35,23 +35,23 @@
                       <input onclick="myF1();" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()" name="search">
                   </form>
                   <div id="myDropdown" class="dropdown-content">
-                      <a onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = 'FacultyofArchitecture.html';">Kip6(Kipsalas st 6) Faculty of architecture</a>
-                      
-                       <a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = 'FacultyofCivilEngineering.html';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
-                      
-                       <a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = 'FacultyofComputerScienceandInformationTechnology.html';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
-                      
-                       <a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = 'FacultyofE-LearningTechnologiesandHumanities.html';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
-                      
-                      <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = 'FacultyofEngineeringEconomicsandManagement.html';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
-                      
-                       <a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = 'FacultyofMaterialsScienceandAppliedChemistry.html';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
-                      
-                       <a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = 'FacultyofMechanicalEngineeringTransportandAeronautics.html';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
-                      
-                       <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = 'FacultyofPowerandElectricalEngineering.html';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
-                      
-                      <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = 'FacultyofElectronicsandTelecommunications.html';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
+                    <a onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = '/FacultyofArchitecture';">Kip6(Kipsalas st 6) Faculty of architecture</a>
+					    
+                    <a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = '/FacultyofCivilEngineering';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
+                     
+                    <a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = '/FacultyofComputerScienceandInformationTechnology';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
+                     
+                    <a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = '/FacultyofE-LearningTechnologiesandHumanities';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
+                     
+                     <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = '/FacultyofEngineeringEconomicsandManagement';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
+                     
+                    <a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = '/FacultyofMaterialsScienceandAppliedChemistry';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
+                     
+                    <a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = '/FacultyofMechanicalEngineeringTransportandAeronautics';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
+                     
+                    <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = '/FacultyofPowerandElectricalEngineering';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
+                   
+                   <a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = '/FacultyofElectronicsandTelecommunications';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
 
                   </div>
               </div>
@@ -64,12 +64,12 @@
                 <ul>
                     <li>
                     <div class="col-md-2">
-                    <a href="../index.html" class="cool-link">Home</a>
+                    <a href="/" class="cool-link">Home</a>
                     </div>
                     </li>
                     <li id="nav1">
                     <div class="col-md-12">
-                    <a href="../PAGES/aboutUs.html" class="cool-link">About us</a>
+                    <a href="aboutus" class="cool-link">About us</a>
                     </div>
                     </li>
                 </ul>
@@ -85,7 +85,7 @@
     <div class="photo">
       <div class = "verone">
       <div id = "#verone" class="col-md-3">
-      <a href="#verona"><img src="../IMAGES/verona.jpg"  height="170px" width="200" alt="Verone Kadriu"></a>
+      <a href="#verona"><img src="{{url_for('static', filename='images/verona.jpg')}}"  height="170px" width="200" alt="Verone Kadriu"></a>
        <div class="overlay">
       <div class="text">Veronë Kadriu<br>Project Leader <br> Kosovo</div>
     </div>
@@ -93,7 +93,7 @@
     </div>
     <div class="blerta">
     <div class="col-md-3">
-      <a href="#blerta"><img src="../IMAGES/Blerta.jpg"  height="170px" width="200" alt="Blerta Jashari"></a>
+      <a href="#blerta"><img src="{{url_for('static', filename='images/Blerta.jpg')}}"  height="170px" width="200" alt="Blerta Jashari"></a>
       <div class="overlay">
       <div class="text">Blerta Jashari<br>Frontend TeamLeader<br>Kosovo</div>
     </div>
@@ -101,7 +101,7 @@
     </div>
     <div class ="raul">
     <div class="col-md-3">
-      <a href="#Raul"><img src="../IMAGES/Raul.jpeg" height="170px" width="200" alt="Raul Espin"></a>
+      <a href="#Raul"><img src="{{url_for('static', filename='images/Raul.jpeg')}}" height="170px" width="200" alt="Raul Espin"></a>
       <div class="overlay">
         <div class="text">Raul Espin<br>Administration TeamLeader<br>Spain</div>
       </div>
@@ -109,7 +109,7 @@
   </div>
   <div class ="fatma">
     <div class="col-md-3">
-      <a href="#Cheima"><img src="../IMAGES/Fatma.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+      <a href="#Cheima"><img src="{{url_for('static', filename='images/Fatma.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
        <div class="overlay">
         <div class="text">Abdellali Fatma Chaima<br>Backend TeamLeader<br>Algeria</div>
       </div>
@@ -118,7 +118,7 @@
       <br>
       <div class ="lucas">
     <div class="col-md-2">
-     <a href="#judickaelle"><img src="../IMAGES/judickaelle.jpg"  height="170px" width="200" alt="Blerta Jashari"></a>
+     <a href="#judickaelle"><img src="{{url_for('static', filename='images/judickaelle.jpg')}}"  height="170px" width="200" alt="Blerta Jashari"></a>
       <div class="overlay">
         <div class="text">Judickaelle Pelletier<br>France</div>
       </div>
@@ -126,7 +126,7 @@
   </div>
   <div class ="lucas">
     <div class="col-md-2">
-      <a href="#nini"><img src="../IMAGES/nini.jpg" height="170px" width="200" alt="Raul Espin"></a>
+      <a href="#nini"><img src="{{url_for('static', filename='images/nini.jpg')}}" height="170px" width="200" alt="Raul Espin"></a>
       <div class="overlay">
         <div class="text">Nini Kvatchantiradze<br>Georgia</div>
       </div>
@@ -134,7 +134,7 @@
   </div>
   <div class ="lucas">
     <div class="col-md-2">
-      <a href="#mert"><img src="../IMAGES/mert.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+      <a href="#mert"><img src="{{url_for('static', filename='images/mert.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Yunus Mert Ḉakar<br>Turkey</div>
       </div>
@@ -142,7 +142,7 @@
   </div>
   <div class ="lucas">
     <div class="col-md-2">
-      <a href="#mehmet"><img src="../IMAGES/mehmet.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+      <a href="#mehmet"><img src="{{url_for('static', filename='images/mehmet.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Mehmet Efe Gösterici<br>Turkey</div>
       </div>
@@ -150,7 +150,7 @@
   </div>
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/kare.png"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/kare.png')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Soufiane Kara<br>Algeria</div>
       </div>
@@ -158,7 +158,7 @@
   </div>
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/lucas.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/lucas.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Lucas Chauvigné<br>France</div>
       </div>
@@ -166,7 +166,7 @@
   </div>
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/marine.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/marine.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Marine Delcroix <br>France</div>
       </div>
@@ -174,7 +174,7 @@
   </div>  
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/giovanni.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/giovanni.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Giovanni Pelloso Gasparetto <br>Brasil</div>
       </div>
@@ -182,7 +182,7 @@
   </div>
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/imene.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/imene.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Bennia Imene <br>Algeria</div>
       </div>
@@ -190,7 +190,7 @@
   </div> 
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/ronaldo.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/ronaldo.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Ronaldo Pilinçi <br>Albania</div>
       </div>
@@ -198,7 +198,7 @@
   </div> 
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/color.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/color.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Diego Olmos Pallarés <br>Spain</div>
       </div>
@@ -206,7 +206,7 @@
   </div> 
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/color.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/color.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Özcan Karabacak <br>Turkey</div>
       </div>
@@ -214,7 +214,7 @@
   </div>
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/color.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/color.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Berkay <br>Turkey</div>
       </div>
@@ -222,7 +222,7 @@
   </div> 
   <div class ="lucas">
     <div class="col-md-2">
-       <a href="#kare"><img src="../IMAGES/color.jpg"  height="180px" width="200" alt="Cheimaa "></a>
+       <a href="#kare"><img src="{{url_for('static', filename='images/color.jpg')}}"  height="180px" width="200" alt="Cheimaa "></a>
       <div class="overlay">
         <div class="text">Burak <br>Turkey</div>
       </div>
@@ -290,11 +290,11 @@
                           Email: <a href="mailto:findYourRTU@gmail.com">findYourRTU@gmail.com</a></p>
 
                         <p>
-                            <a href="https://www.linkedin.com/"><img src="../IMAGES/linkedin.png" class="socialicons" alt="linkedin" width="16" height="16"></a>
-                            <a href="https://www.twitter.com/"><img src="../IMAGES/Twitter.png" class="socialicons" alt="twitter" width="16" height="16"></a>
-                            <a href="https://www.pinterest.com/"><img src="../IMAGES/Pinterest.png" class="socialicons" alt="pinterest" width="16" height="16"></a>
-                            <a href="https://www.plus.google.com/"><img src="../IMAGES/Google.png" class="socialicons" alt="googleplus" width="16" height="16"></a>
-                            <img class="socialicons" src="../IMAGES/rss.jpg" alt="RSS" width="16" height="16">
+                          <a href="https://www.linkedin.com/"><img src="{{url_for('static', filename='images/Linkedin.png')}}" class="socialicons" alt="linkedin" width="16" height="16"></a>
+                          <a href="https://www.twitter.com/"><img src="{{url_for('static', filename='images/Twitter.png')}}" class="socialicons" alt="twitter" width="16" height="16"></a>
+                          <a href="https://www.pinterest.com/"><img src="{{url_for('static', filename='images/Pinterest.png')}}" class="socialicons" alt="pinterest" width="16" height="16"></a>
+                          <a href="https://www.plus.google.com/"><img src="{{url_for('static', filename='images/Google.png')}}" class="socialicons" alt="googleplus" width="16" height="16"></a>
+                          <img class="socialicons" src="{{url_for('static', filename='images/rss.jpg')}}" alt="RSS" width="16" height="16">
                         </p>
                     </div>
                 </div>
