--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
  <head>
-            <link rel="stylesheet" type="text/css" href="CSS/index.css">
-            <link rel="stylesheet" type="text/css" href="CSS/header.css">
-            <link rel="stylesheet" type="text/css" href="CSS/footer.css">
-            <link rel="stylesheet" type="text/css" href="CSS/menu.css">
-            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/header.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/footer.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/menu.css') }}">
+ 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
         </head>
         <body>
+         
     <div>
     <div class="col-md-12">      
         <!--==========================================================HEADER====================================================-->
 
         <header class="col-md-12" >
             <div class="right">
-                <a href="PAGES\help.html"> Help </a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                  <i class="fa fa-bars"></i>
-                </a>
+                <a href="/help"> Help </a>
             </div>
 
     
@@ -31,31 +33,31 @@
         <div id="NAVBAR" class="col-md-12" >
             <div class="col-md-12" >
             <div id="logo" class="col-md-2">
-            <h3><a href="index.html"><img src="IMAGES/logo.png" height="70px" width="120px"></a></h3>
+            <h3><a href="/"><img src="{{url_for('static', filename='images/logo.png')}}" height="70px" width="120px"></a></h3>
             </div>
             <div class="col-md-7">
                 <div class="col-md-8">
                     <form class="example" action="#">
-						<input onclick="myF1();" onkeypress="myF3()" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()" name="search">
+						<input onclick="myF1();" type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()" name="search">
                     </form>
                     <div id="myDropdown" class="dropdown-content">
-				    	<a onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = 'PAGES/FacultyofArchitecture.html';">Kip6(Kipsalas st 6) Faculty of architecture</a>
+				    	<a  onclick="myF1(); document.getElementById('myInput').value='Kip6(Kipsalas st 6) Faculty of architecture'; arg2 = '/FacultyofArchitecture';">Kip6(Kipsalas st 6) Faculty of architecture</a>
 					    
-					 	<a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = 'PAGES/FacultyofCivilEngineering.html';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering'; arg2 = '/FacultyofCivilEngineering';">Kip6A(Kipsalas st 6A) - Kip6B(Kipsalas st 6B) Faculty of Civil Engineering</a>
 					    
-					 	<a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = 'PAGES/FacultyofComputerScienceandInformationTechnology.html';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
+					 	<a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = '/FacultyofComputerScienceandInformationTechnology';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
 					    
-					 	<a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = 'PAGES/FacultyofE-LearningTechnologiesandHumanities.html';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = '/FacultyofE-LearningTechnologiesandHumanities';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
 					    
-					    <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = 'PAGES/FacultyofEngineeringEconomicsandManagement.html';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
+					    <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = '/FacultyofEngineeringEconomicsandManagement';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
 					    
-					 	<a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = 'PAGES/FacultyofMaterialsScienceandAppliedChemistry.html';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
+					 	<a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = '/FacultyofMaterialsScienceandAppliedChemistry';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
 					    
-					 	<a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = 'PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics'; arg2 = '/FacultyofMechanicalEngineeringTransportandAeronautics';">Kip6B(Kipsalas st 6B) Faculty of Mechanical Engineering Transport and Aeronautics</a>
 					    
-					 	<a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = 'PAGES/FacultyofPowerandElectricalEngineering.html';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electrical and Environmental Engineering'; arg2 = '/FacultyofPowerandElectricalEngineering';">Az(Azenes st) Faculty of Electrical and Environmental Engineering</a>
 						
-						<a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = 'PAGES/FacultyofElectronicsandTelecommunications.html';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
+						<a onclick="myF1(); document.getElementById('myInput').value='Az(Āzenes st) Faculty of Electronics and Telecommunications'; arg2 = '/FacultyofElectronicsandTelecommunications';">Az(Azenes st) Faculty of Electronics and Telecommunications</a>
 
 					</div>
                 </div>
@@ -66,16 +68,19 @@
             </div>
             <div class="col-md-3"  id="nav1">
 				<ul>
+          
                     <li>
                     <div class="col-md-2">
-                    <a id="home" href="index.html" class="cool-link">Home</a>
+                    <a id="home" href="/" class="cool-link">Home</a>
                     </div>
                     </li>
                     <li id="nav1">
                     <div class="col-md-12">
-                    <a href="PAGES/aboutUs.html" class="cool-link">About us</a>
+                    <a href="/aboutus" class="cool-link">About us</a>
                     </div>
                     </li>
+                    
+
                     
                 </ul>
             </div>
@@ -97,6 +102,8 @@
               x.idName = "nav1";
             }
           }
+
+          
           </script>
 
 
@@ -105,49 +112,50 @@
     
 <div id="allFaculties" class="col-md-2" style="border: 1px solid #005551">
   <a class="active">Our Faculties</a>
-  <a href="PAGES/FacultyofArchitecture.html">Faculty of Architecture</a>
-  <a href="PAGES/FacultyofCivilEngineering.html">Faculty of Civil Engineering</a>
-  <a href="PAGES/FacultyofComputerScienceandInformationTechnology.html">Faculty of Computer Science and Information Technology</a>
-  <a href="PAGES/FacultyofE-LearningTechnologiesandHumanities.html">Faculty of E-Learning Technologies and Humanities</a>
-   <a href="PAGES/FacultyofEngineeringEconomicsandManagement.html">Faculty of Engineering Economics and Management</a>
-  <a href="PAGES/FacultyofMaterialsScienceandAppliedChemistry.html">Faculty of Materials Science and Applied Chemistry</a>
-  <a href="PAGES/FacultyofMechanicalEngineeringTransportandAeronautics.html">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
-  <a href="PAGES/FacultyofPowerandElectricalEngineering.html">Faculty of Electrical and Environmental Engineering</a>
-  <a href="PAGES/FacultyofElectronicsandTelecommunications.html">Faculty of Electronics and Telecommunications</a>
+  <a href="/FacultyofArchitecture">Faculty of Architecture</a>
+  <a href="/FacultyofCivilEngineering">Faculty of Civil Engineering</a>
+  <a href="/FacultyofComputerScienceandInformationTechnology">Faculty of Computer Science and Information Technology</a>
+  <a href="/FacultyofE-LearningTechnologiesandHumanities">Faculty of E-Learning Technologies and Humanities</a>
+   <a href="/FacultyofEngineeringEconomicsandManagement">Faculty of Engineering Economics and Management</a>
+  <a href="/FacultyofMaterialsScienceandAppliedChemistry">Faculty of Materials Science and Applied Chemistry</a>
+  <a href="/FacultyofMechanicalEngineeringTransportandAeronautics">Faculty of Mechanical Engineering, Transport and Aeronautics</a>
+  <a href="/FacultyofPowerandElectricalEngineering">Faculty of Electrical and Environmental Engineering</a>
+  <a href="/FacultyofElectronicsandTelecommunications">Faculty of Electronics and Telecommunications</a>
 </div>
+
 <div class = "col-md-10" >
     <div class="slideshow-container">
 <div class="Slides">
   <div class="mySlides">
-  <img  src="IMAGES/rtu.jpg" style="width: 100%; height: 580px; " >
+  <img  src="{{url_for('static', filename='images/rtu.jpg')}}" style="width: 100%; height: 580px; " >
   <h4 style="text-align: center;">Riga Technical University</h4>
   </div>
   <div class="mySlides">
-    <img  src="IMAGES/architecture.jpg" style="width: 100%; height: 580px; ">
+    <img  src="{{url_for('static', filename='images/architecture.jpg')}}" style="width: 100%; height: 580px; ">
     <h4 style="text-align: center;">Faculty of Architecture</h4>
   </div>
   <div class="mySlides">
-    <img  src="IMAGES/civil.jpg" style="width: 100%; height: 580px;">
+    <img  src="{{url_for('static', filename='images/civil.jpg')}}" style="width: 100%; height: 580px;">
     <h4 style="text-align: center;">Faculty of Civil Engineering</h4>
   </div>
   <div class="mySlides">
-    <img  src="IMAGES/cs.jpg" style="width: 100%; height: 580px;">
+    <img  src="{{url_for('static', filename='images/cs.jpg')}}" style="width: 100%; height: 580px;">
     <h4 style="text-align: center;">Faculty of Computer Science and Information Technology</h4>
   </div>
   <div class="mySlides">
-    <img  src="IMAGES/human.jpg" style="width: 100%; height: 580px;">
+    <img  src="{{url_for('static', filename='images/human.jpg')}}" style="width: 100%; height: 580px;">
     <h4 style="text-align: center;">Faculty of E-Learning Technologies and Humanities</h4>
   </div>
   <div class="mySlides">
-    <img  src="IMAGES/economics.jpg" style="width: 100%; height: 580px;">
+    <img  src="{{url_for('static', filename='images/economics.jpg')}}" style="width: 100%; height: 580px;">
     <h4 style="text-align: center;">Faculty of Engineering Economics and Management</h4>
   </div>
   <div class="mySlides">
-    <img  src="IMAGES/power.jpg" style="width: 100%; height: 580px;">
+    <img  src="{{url_for('static', filename='images/power.jpg')}}" style="width: 100%; height: 580px;">
     <h4 style="text-align: center;">Faculty of Electrical and Environmental Engineering</h4>
   </div>
   <div class="mySlides">
-    <img  src="IMAGES/mechanic.jpg" style="width: 100%; height: 580px;">
+    <img  src="{{url_for('static', filename='images/mechanic.jpg')}}" style="width: 100%; height: 580px;">
     <h4 style="text-align: center;">Faculty of Mechanical Engineering, Transport and Aeronautics</h4>
   </div>
   
@@ -235,11 +243,11 @@ function showSlides() {
                       
                         
                         <p>
-                            <a href="https://www.linkedin.com/"><img src="IMAGES/linkedin.png" class="socialicons" alt="linkedin" width="16" height="16"></a>
-                            <a href="https://www.twitter.com/"><img src="IMAGES/Twitter.png" class="socialicons" alt="twitter" width="16" height="16"></a>
-                            <a href="https://www.pinterest.com/"><img src="IMAGES/Pinterest.png" class="socialicons" alt="pinterest" width="16" height="16"></a>
-                            <a href="https://www.plus.google.com/"><img src="IMAGES/Google.png" class="socialicons" alt="googleplus" width="16" height="16"></a>
-                            <img class="socialicons" src="IMAGES/rss.jpg" alt="RSS" width="16" height="16">
+                            <a href="https://www.linkedin.com/"><img src="{{url_for('static', filename='images/Linkedin.png')}}" class="socialicons" alt="linkedin" width="16" height="16"></a>
+                            <a href="https://www.twitter.com/"><img src="{{url_for('static', filename='images/Twitter.png')}}" class="socialicons" alt="twitter" width="16" height="16"></a>
+                            <a href="https://www.pinterest.com/"><img src="{{url_for('static', filename='images/Pinterest.png')}}" class="socialicons" alt="pinterest" width="16" height="16"></a>
+                            <a href="https://www.plus.google.com/"><img src="{{url_for('static', filename='images/Google.png')}}" class="socialicons" alt="googleplus" width="16" height="16"></a>
+                            <img class="socialicons" src="{{url_for('static', filename='images/rss.jpg')}}" alt="RSS" width="16" height="16">
                         </p>
                     </div>
                 </div>
@@ -272,7 +280,13 @@ function showSlides() {
 		  }
       
 		}
-    
+    function inputKeyUp(e) {
+    e.which = e.which || e.keyCode;
+    if(e.which == 13) {
+      console.log("13");
+      window.location.href = arg2;
+    }
+  }
   
 		function myF3(){
 			window.location.href = arg2;
