--- a/templates/FacultyofElectronicsandTelecommunications.html
+++ b/templates/FacultyofElectronicsandTelecommunications.html
@@ -226,7 +226,7 @@
                           Email: <a href="mailto:findYourRTU@gmail.com">findYourRTU@gmail.com</a></p>
 
                         <p>
-                            <a href="https://www.linkedin.com/"><img src="{{url_for('static', filename='images/Linkedin.png')}}" class="socialicons" alt="linkedin" width="16" height="16"></a>
+                            <a href="https://www.linkedin.com/"><img src="{{url_for('static', filename='images/linkedin.png')}}" class="socialicons" alt="linkedin" width="16" height="16"></a>
                             <a href="https://www.twitter.com/"><img src="{{url_for('static', filename='images/Twitter.png')}}" class="socialicons" alt="twitter" width="16" height="16"></a>
                             <a href="https://www.pinterest.com/"><img src="{{url_for('static', filename='images/Pinterest.png')}}" class="socialicons" alt="pinterest" width="16" height="16"></a>
                             <a href="https://www.plus.google.com/"><img src="{{url_for('static', filename='images/Google.png')}}" class="socialicons" alt="googleplus" width="16" height="16"></a>
