--- a/templates/FacultyofMechanicalEngineeringTransportandAeronautics.html
+++ b/templates/FacultyofMechanicalEngineeringTransportandAeronautics.html
@@ -49,7 +49,7 @@
                         
                          <a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = 'FacultyofE-LearningTechnologiesandHumanities';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
                         
-                        <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = 'FacultyofEngineeringEconomicsandManagement';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
+                        <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) - K1(Kalku st 1) Faculty of Engineering Economics and Management'; arg2 = 'FacultyofEngineeringEconomicsandManagement';">Kc6(Kalnciema st 6) - K1(Kalku st 1) Faculty of Engineering Economics and Management</a>
                         
                          <a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = 'FacultyofMaterialsScienceandAppliedChemistry';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
                         
