--- a/templates/index.html
+++ b/templates/index.html
@@ -47,9 +47,9 @@
 					    
 					 	<a onclick="myF1(); document.getElementById('myInput').value='S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology'; arg2 = '/FacultyofComputerScienceandInformationTechnology';">S1(Setas st 1) - D2(Daugavgrivas st 2) - M1(Meza st) Faculty of Computer Science and Information Technology</a>
 					    
-					 	<a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = '/FacultyofE-LearningTechnologiesandHumanities';">Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities</a>
+					 	<a onclick="myF1(); document.getElementById('myInput').value='Kr(Kronvalda bulvaris) Faculty of E-Learning Technologies and Humanities'; arg2 = '/FacultyofE-LearningTechnologiesandHumanities';">Kr(Kronvalda bulvaris)Faculty of E-Learning Technologies and Humanities</a>
 					    
-					    <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management'; arg2 = '/FacultyofEngineeringEconomicsandManagement';">Kc6(Kalnciema st 6) Faculty of Engineering Economics and Management</a>
+					    <a onclick="myF1(); document.getElementById('myInput').value='Kc6(Kalnciema st 6) - K1(Kalku st 1) Faculty of Engineering Economics and Management'; arg2 = '/FacultyofEngineeringEconomicsandManagement';">Kc6(Kalnciema st 6) - K1(Kalku st 1) Faculty of Engineering Economics and Management</a>
 					    
 					 	<a onclick="myF1(); document.getElementById('myInput').value='PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry'; arg2 = '/FacultyofMaterialsScienceandAppliedChemistry';">PV(Paula Valdena st) Faculty of Materials Science and Applied Chemistry</a>
 					    
